--- a/Views/auth/Register.ejs
+++ b/Views/auth/Register.ejs
@@ -1,5 +1,6 @@
 <%- include('../header') %>
 
+<div class="container-fluid">
 
 <div class="section-top-border">
     <div class="row">
@@ -41,7 +42,7 @@
             </form>
         </div>
         
-        
+    </div>
     </div>
 </div>
 
